# ome-zarr-models-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  codecov.yml  info.txt  mkdocs.yml  pyproject.toml  transform_graph.py
.github/workflows/: publish-docs.yml  publish-to-pypi.yml  python-package.yml
docs/: api.md  changelog.md  cli.md  contributing.md  convert.py  fixes.md  how-to.md  index.md  tutorial.py
docs/api/: index.md  v04.md
docs/api/common/: exceptions.md  image.md  multiscales.md  plate.md
docs/api/dev/: bioformats2raw.md  coordinates.md  groups.md  hcs.md  image-label.md  image.md  labels.md  other.md  scene.md  well.md
docs/api/v04/: bioformats2raw.md  datasets.md  image.md  metadata.md  other.md  top_level.md
docs/api/v05/: image.md
docs/api/v06/: bioformats2raw.md  coordinates.md  groups.md  hcs.md  image-label.md  image.md  labels.md  other.md  scene.md  well.md
docs/data/cat.ome.zarr/: .zattrs
docs/data/cat.ome.zarr/0/: .zarray
docs/data/cat.ome.zarr/1/: .zarray
docs/data/cat.ome.zarr/2/: .zarray
docs/data/cat.ome.zarr/3/: .zarray
docs/data/cat.ome.zarr/4/: .zarray
docs/guides/: coordinates.py
scripts/: generate_transform_graphs.py  transform_conformance_dingus.py
src/ome_zarr_models/: __init__.py  _cli.py  _utils.py  base.py  cli.py  data.py  exceptions.py  utils.py
src/ome_zarr_models/_rfc5_transforms/: __init__.py  axes.py  base.py  coordinate_systems.py  coordinate_transformations.py  hcs.py  image.py  image_label.py  labels.py  multiscales.py  plate.py  transform_utils.py  well.py
src/ome_zarr_models/_v05/: axes.py  base.py  hcs.py  image.py  image_label.py  labels.py  multiscales.py  plate.py  well.py
src/ome_zarr_models/_v06/: __init__.py  axes.py  base.py  bioformats2raw.py  collection.py  container.py  coordinate_transformations.py  coordinate_transforms.py  hcs.py  image.py  image_label.py  image_label_types.py  labels.py  multiscales.py  scene.py  well.py  well_types.py
src/ome_zarr_models/common/: __init__.py  axes.py  image_label_types.py  multiscales.py  plate.py  validation.py  well_types.py
src/ome_zarr_models/tmp/v04/: bikeshed.py  omero.py
src/ome_zarr_models/v04/: __init__.py  _bioformats2raw.py  _shared.py  axes.py  base.py  bioformats2raw.py  coordinate_transformations.py  hcs.py  image.py  image2.py  image_label.py  image_label_types.py  image_old.py  labels.py  multiscales.py  omero.py  plate.py  well.py  well_types.py
src/ome_zarr_models/v04/models/: __init__.py  coordinate_transformations.py  labels.py  multiscales.py  omero.py
src/ome_zarr_models/v04/v04/: axes.py  multiscales.py  plate.py  well.py
src/ome_zarr_models/v05/: __init__.py  _bioformats2raw.py  axes.py  base.py  bioformats2raw.py  coordinate_transformations.py  hcs.py  image.py  image_label.py  image_label_types.py  labels.py  multiscales.py  omero.py  plate.py  well.py  well_types.py
src/ome_zarr_models/v06/: __init__.py  base.py  bioformats2raw.py  coordinate_transforms.py  hcs.py  image.py  image_label.py  image_label_types.py  labels.py  multiscales.py  scene.py  well.py  well_types.py
src/ome_zarr_models/zarr_models/: base.py  utils.py  v2.py
src/ome_zarr_models/zarr_utils/: __init__.py
src/ome_zarr_models_py/v04/: image.py
stitched_tiles_2d.zarr/: zarr.json
stitched_tiles_2d.zarr/tile_0/: zarr.json
stitched_tiles_2d.zarr/tile_1/: zarr.json
stitched_tiles_2d.zarr/tile_2/: zarr.json
stitched_tiles_2d.zarr/tile_3/: zarr.json
tests/: conftest.py  test_cli.py  test_idr.py  test_image.py  test_root.py
tests/_rfc5_transforms/: conftest.py  test_image.py  test_multiscales.py  test_transformations.py
tests/_rfc5_transforms/data_rfc5/: README.md  image_example.json  sparse_checkout_guide.md
tests/_rfc5_transforms/test_data_rfc5/: test_all_data_is_tested.py
tests/_rfc5_transforms/test_data_rfc5/from_specification/: test_coordinate_systems.py  test_multiscales_strict.py  test_transformations.py
tests/_rfc5_transforms/test_data_rfc5/full_examples/: test_3d_basic.py  test_3d_simple.py
tests/_rfc5_transforms/test_data_rfc5/ngff/: test_coordSystems.py  test_subspace.py  (+1 more)
tests/_v06/: conftest.py  test_axes.py  test_bioformats2raw.py  test_collection.py  test_container.py  test_coordinate_transforms.py  test_general.py  test_hcs.py  test_image.py  test_image_label.py  test_labels.py  test_multiscales.py  test_plate.py  test_scene.py  test_transformations.py  test_transforms.py  test_well.py
tests/_v06/test_data_rfc5/: test_all_data_is_tested.py
tests/cassettes/: test_load_remote_data.yaml
tests/cassettes/test_idr/: test_load_remote_data[BR00109990_C2.zarr].yaml  test_load_remote_data[https---uk1s3.embassy.ebi.ac.uk-idr-zarr-v0.4-idr0076A-10501752.zarr-Image-None].yaml  test_load_remote_data[https---uk1s3.embassy.ebi.ac.uk-idr-zarr-v0.5-idr0033A-BR00109990_C2.zarr-BioFormats2Raw-None].yaml  test_load_remote_data[https---uk1s3.embassy.ebi.ac.uk-idr-zarr-v0.5-idr0062A-6001240_labels.zarr-Image-None].yaml  test_load_remote_data[https---uk1s3.embassy.ebi.ac.uk-idr-zarr-v0.5-idr0066-ExpA_VIP_ASLM_on.zarr-Image-None].yaml  test_load_remote_data[https---uk1s3.embassy.ebi.ac.uk-idr-zarr-v0.5-idr0066-ExpD_chicken_embryo_MIP.ome.zarr-Image-None].yaml
tests/cassettes/test_root/: test_load_remote_data.yaml
tests/data/: ElastixTransformParameters.txt
tests/v04/: conftest.py  test_bioformats2raw.py  test_hcs.py  test_image.py  test_image_label.py  test_labels.py  test_multiscales.py  test_omero.py  test_plate.py  test_well.py
tests/v05/: conftest.py  test_bioformats2raw.py  test_general.py  test_hcs.py  test_image.py  test_image_label.py  test_labels.py  test_multiscales.py  test_plate.py  test_well.py
tests/v05/data/: image_example.json  image_label_example.json  labels_image_example.json
tests/v06/: test_bioformats2raw.py  test_collection.py  test_coordinate_transforms.py  test_general.py  test_hcs.py  test_image.py  test_image_label.py  test_labels.py  test_multiscales.py  test_plate.py  test_scene.py  test_well.py
tests/v06/data_rfc5/: README.md
(+93 files in other folders)
