[project]
name = "ome-zarr-models"
dynamic = ["version"]
description = "Data models for OME-Zarr"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["zarr<3", "typing_extensions", "pydantic", "pydantic-zarr"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.12.2",
    "mkdocs-material",
    "mkdocs-jupyter",
    "matplotlib",
    "rich",
    "griffe-pydantic",
    "fsspec[http]",
]
pydantic = ["pydantic"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.12.2",
    "mkdocs-material",
    "mkdocs-jupyter",
    "matplotlib",
    "rich",
    "griffe-pydantic",
    "fsspec[http]",
]
dev = [
    "jupyter[notebook]>=1.1.1",
    "jupytext>=1.16.4",
    "mypy",
    "ruff",
    "pre-commit",
    "pytest>=8.3.3",
]

test = ["pytest"]

pydantic = ["pydantic", "pydantic-zarr"]

[tool.uv]
default-groups = ["docs", "dev", "pydantic", "test"]

# Ruff configuration for linting and formatting
# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401",  # First line should be in imperative mood (remove to opt in)
    "D200",  # One line docstring should fit on one line.
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "TC001", # Move application import `...` into a type-checking block. This messes with nested pydantic models

]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

[tool.mypy]

strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["zarr.*", "pydantic_zarr.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
